Added spellchecking for ru and en

--- a/src/vue/codemirror-theme.less
+++ b/src/vue/codemirror-theme.less
@@ -15,6 +15,10 @@ These are derived from https://github.com/idleberg/base16-codemirror
 (specifically the tomorrow-night variation), but customized to match light/dark themes.
 */
 
+.CodeMirror .cm-spell-error {
+	background: url("https://raw.githubusercontent.com/jwulf/typojs-project/master/public/images/red-wavy-underline.gif") bottom repeat-x;
+}
+
 .cm-s-default {
 	.CodeMirror { color: #282a2e;}
  	div.CodeMirror-selected {background: #d6d6d6 !important;}
